# django_firstproject

./: README.md  pyproject.toml
django_firstproject/: asgi.py  settings.py  urls.py  wsgi.py
firstapp/: views.py
