[tool.poetry]
name = "django-firstproject"
version = "0.1.0"
description = ""
authors = ["wansu27 <ridwan.setiawan@shippit.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
